--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "doc-lint": "documentation lint",
     "doc-serve": "documentation serve",
     "version": "npm run test && npm run build && git add -A dist",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "server": "browser-sync start -s 'test' --ss 'lib' -f 'test' 'lib' --no-open --no-ui --no-ghost-mode --no-notify"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.17.0",
     "documentation": "^4.0.0-beta2",
     "faucet": "0.0.1",
     "nightmare": "^2.3.3",
