--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "name": "accedeweb-modal",
   "version": "0.0.0",
   "description": "WAI-ARIA modal plugin based on AcceDe Web instructions",
-  "main": "lib/modal.js",
+  "main": "dist/modal.js",
+  "jsnext:main": "lib/index.js",
   "scripts": {
     "test": "tape test/*.js | faucet",
-    "build": "node build.js",
+    "build": "rollup --config",
     "doc": "documentation build lib/*.js",
     "doc-lint": "documentation lint",
     "doc-serve": "documentation serve",
     "version": "npm run test && npm run build && git add -A dist",
     "postversion": "git push && git push --tags",
-    "server": "browser-sync start -s 'test' --ss 'lib' -f 'test' 'lib' --no-open --no-ui --no-ghost-mode --no-notify"
+    "server": "browser-sync start -s 'test' --ss 'dist' -f 'test' 'dist' --no-open --no-ui --no-ghost-mode --no-notify"
   },
   "repository": {
     "type": "git",
@@ -33,11 +34,14 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.17.0",
     "documentation": "^4.0.0-beta2",
     "faucet": "0.0.1",
     "morgan": "^1.7.0",
     "nightmare": "^2.7.0",
+    "rollup": "^0.49.2",
+    "rollup-plugin-babel": "^3.0.2",
     "tape": "^4.5.1",
     "uglify-js": "^2.7.3"
   }
