--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "jsnext:main": "lib/index.js",
   "scripts": {
     "test": "tape test/*.js | faucet",
-    "build": "rollup --config",
-    "doc": "documentation build lib/*.js",
-    "doc-lint": "documentation lint",
+    "build": "rollup -c && rollup -c rollup.config.minified.js",
+    "doc": "documentation build lib/index.js -f html -o docs --shallow",
+    "doc-lint": "documentation lint lib/index.js",
     "doc-serve": "documentation serve",
     "version": "npm run test && npm run build && git add -A dist",
     "postversion": "git push && git push --tags",
@@ -33,16 +33,17 @@
     "url": "http://switch.paris"
   },
   "license": "ISC",
+  "homepage": "http://a11y.switch.paris/",
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.17.0",
-    "documentation": "^4.0.0-beta2",
+    "browser-sync": "^2.18.13",
+    "documentation": "^5.3.1",
     "faucet": "0.0.1",
-    "morgan": "^1.7.0",
-    "nightmare": "^2.7.0",
-    "rollup": "^0.49.2",
+    "nightmare": "^2.10.0",
+    "rollup": "^0.49.3",
     "rollup-plugin-babel": "^3.0.2",
-    "tape": "^4.5.1",
-    "uglify-js": "^2.7.3"
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "tape": "^4.8.0"
   }
 }
