--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "browser-sync": "^2.18.13",
     "cross-env": "^5.1.5",
     "documentation": "^5.3.1",
+    "eslint": "^4.19.1",
+    "eslint-config-idiomatic": "^4.0.0",
     "puppeteer": "^1.4.0",
     "rollup": "^0.49.3",
     "rollup-plugin-babel": "^3.0.2",
