--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   ],
   "homepage": "http://a11y.switch.paris/",
   "devDependencies": {
+    "@detools/tap-diff": "^0.2.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.7",
@@ -56,7 +57,6 @@
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1",
-    "tap-diff": "^0.1.1",
     "tape": "^4.8.0",
     "watch": "^1.0.2"
   }
