--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rollup -c && cross-env NODE_ENV=production rollup -c",
     "doc": "documentation build lib/index.js -f html -o docs --shallow",
     "doc-lint": "documentation lint lib/index.js",
-    "doc-serve": "documentation serve",
+    "doc-serve": "documentation serve lib/index.js",
     "version": "npm run build && npm run test && git add -A dist",
     "postversion": "git push && git push --tags",
     "server": "browser-sync start -s 'test' --ss 'dist' -f 'test' 'dist' --no-open --no-ui --no-ghost-mode --no-notify",
@@ -49,7 +49,7 @@
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.7",
     "cross-env": "^5.2.1",
-    "documentation": "^5.5.0",
+    "documentation": "^12.2.0",
     "eslint": "^4.19.1",
     "eslint-config-idiomatic": "^4.0.0",
     "puppeteer": "^1.20.0",
