--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "homepage": "http://a11y.switch.paris/",
   "devDependencies": {
     "@detools/tap-diff": "^0.2.2",
+    "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.7",
